--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -8,9 +8,9 @@
 // $color-1-light: #5881c3; // Real google suggested colours
 // $color-1-dark: #002d64;
 
-$color-1:  #1b5e20; // Real material.io colours (light blue)
-$color-1-light: #4c8c4a;
-$color-1-dark: #003300;
+$color-1:  #827515; // Real material.io colours (light blue)
+$color-1-light: #b4a345;
+$color-1-dark: #524a00;
 $color-active: darken($color-1,6%);
 $body-font-size: 17px;
 $body-color: white;
