--- a/_includes/datanavigation.html
+++ b/_includes/datanavigation.html
@@ -3,7 +3,7 @@
     <div id="wideheader">
   <!-- I put a few animations in for specific pages, just to make the site a bit more playful -->
      <div style="overflow: hidden;">
-       <a href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}>
+       <a href="/index-en">
   <!-- top left bird -->
        <img alt="top left bird logo" class="{% for each in site.bird_left %}{% if page.trans == each.trans %} {{ each.animation }} {% endif %}{% endfor %}" src="/assets/images/quaker_icon_95x95.png" width="95px" height="95px">
 		     
@@ -20,16 +20,16 @@
 	<div id="special">&nbsp; </div>
 	<!-- Narrowheader refers what the header looks like on a narrow screen -->
   <div id="narrowheader" class="">
-	  <a href="{% if fr %}/index-fr{% else %}/index-en{% endif %}" id="nolink" class="{% for each in site.mobile_header_animation %}{% if page.trans == each.trans %} {{ each.animation }} {% endif %}{% endfor %}">{% if fr %} {{ site.short_title-fr }} {% else %} {{ site.short_title }} {% endif %}</a>
+	  <a href="/index" id="nolink" class="{% for each in site.mobile_header_animation %}{% if page.trans == each.trans %} {{ each.animation }} {% endif %}{% endfor %}"> {{ site.short_title }} </a>
   </div>
 </div>
 
 <div class="navbar" id="myNavbar">
   <a title="Dropdown menu" class="icon" onkeypress="respondBar()" onclick="respondBar()"><i class="fas fa-bars"></i></a>
-	<a id="widehome" aria-label="Home" alt="Home" title="Home" class="{% case page.url %}{% when '/' or '/index-fr' or '/index-en' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="{% if fr %}Accueil{% else %}Home{% endif %}">{% if fr %}{% else %}{% endif %} <i class="fas fa-home fa-lg" alt="Home button" style="padding=0;"></i></a>
-	<a id="narrowhome" title="Home" class="{% case page.url %}{% when '/' or '/index-fr' or '/index-en' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="{% if fr %}Accueil{% else %}Home{% endif %}">{% if fr %}Accueil{% else %}Home{% endif %} &nbsp;<i class="fas fa-home" style="padding=0;"></i></a>
+	<a id="widehome" aria-label="Home" alt="Home" title="Home" class="{% case page.url %}{% when '/' or '/index' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="Home"> <i class="fas fa-home fa-lg" alt="Home button" style="padding=0;"></i></a>
+	<a id="narrowhome" title="Home" class="{% case page.url %}{% when '/' or '/index-fr' or '/index-en' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="Home">Home &nbsp;<i class="fas fa-home" style="padding=0;"></i></a>
          {% assign counter = 0 %}
-	  {% if fr %} {% assign doclist = site.data.navigation.fr %}{% else %} {% assign doclist = site.data.navigation.en %}{% endif %}
+	   {% assign doclist = site.data.navigation.en %}
 	  {% for item in doclist %} 
 		{% if item.submenu != nil %}
 		{% assign counter = counter | plus: 1 %}
@@ -48,24 +48,6 @@
 		<a href="{{ item.link }}" {% if item.hovertitle %}title="{{ item.hovertitle }}"{% endif %} {% if item.link == page.url %}class="active"{% endif %}>{{ item.title }} &nbsp;{{ item.icon }}</a>
 		{% endif %}
   {% endfor %}
-  <!-- Language changer button -->
-  {% if page.trans %}
-  {% if fr %}{% assign otherlang = "en" %}{% elsif page.lang == "en" %}{% assign otherlang = "fr" %}{% endif %}
-  {% assign otherurl = nil %}
-	{% for each in site.pages %}
-        {% if each.trans == page.trans and each.lang == otherlang %}{% assign otherurl = each.url %}{% endif %}
-        {% endfor %}
-  {% unless otherurl %}
-	{% for each in site.posts %}
-        {% if each.trans == page.trans and each.lang == otherlang %}{% assign otherurl = each.url %}{% endif %}
-	{% endfor %}
-  {% endunless %}
-  {% if otherurl %}
-			     <!-- language changer button, which flip animation -->
-  <a class="icon" id="response" title="{% if fr %}View this page in English{% elsif page.lang == "en" %}Voir cette page en français{% endif %}"onclick="flipIcon()">{% if fr %}English{% elsif page.lang == "en" %}Français{% endif %} &nbsp;<i id="flippy" class="fas fa-random"></i></a>
-  <a href="{{ otherurl }}" id="flippy2" {% if page.trans == "search" %}class="searchy" {% endif %}style="display: none;"></a>
-  {% endif %}
-  {% endif %}
   <div class="search-container">
 	  <form id="formy" title="search form" class="" action="/search-{% if fr %}fr{% else %}en{% endif %}">
 	    <input title="{% if fr %}Texte de recherche{% else %}search text{% endif %}" id="inputsearch" aria-label="{% if fr %}Texte de recherche{% else %}search text{% endif %}" type="search" class="input_hide" onfocusout="foldSearch()" placeholder="{% if fr %}Recherchez...{% else %}Search...{% endif %}" autocomplete="off" name="q">
