--- a/_includes/datanavigation.html
+++ b/_includes/datanavigation.html
@@ -3,7 +3,7 @@
     <div id="wideheader">
   <!-- I put a few animations in for specific pages, just to make the site a bit more playful -->
      <div style="overflow: hidden;">
-       <a href="/index-en">
+       <a href="/index">
   <!-- top left bird -->
        <img alt="top left bird logo" class="{% for each in site.bird_left %}{% if page.trans == each.trans %} {{ each.animation }} {% endif %}{% endfor %}" src="/assets/images/quaker_icon_95x95.png" width="95px" height="95px">
 		     
@@ -26,8 +26,8 @@
 
 <div class="navbar" id="myNavbar">
   <a title="Dropdown menu" class="icon" onkeypress="respondBar()" onclick="respondBar()"><i class="fas fa-bars"></i></a>
-	<a id="widehome" aria-label="Home" alt="Home" title="Home" class="{% case page.url %}{% when '/' or '/index' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="Home"> <i class="fas fa-home fa-lg" alt="Home button" style="padding=0;"></i></a>
-	<a id="narrowhome" title="Home" class="{% case page.url %}{% when '/' or '/index-fr' or '/index-en' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}  title="Home">Home &nbsp;<i class="fas fa-home" style="padding=0;"></i></a>
+	<a id="widehome" aria-label="Home" alt="Home" title="Home" class="{% case page.url %}{% when '/' or '/index' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index"{% endif %}  title="Home"> <i class="fas fa-home fa-lg" alt="Home button" style="padding=0;"></i></a>
+	<a id="narrowhome" title="Home" class="{% case page.url %}{% when '/' or '/index-fr' or '/index' %}active{% endcase %}"  href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index"{% endif %}  title="Home">Home &nbsp;<i class="fas fa-home" style="padding=0;"></i></a>
          {% assign counter = 0 %}
 	   {% assign doclist = site.data.navigation.en %}
 	  {% for item in doclist %} 
@@ -57,6 +57,6 @@
   </div>
 			     <!-- Mobile bird icon -->
 	  <div class="icon_right">
-		  <a title="Home" href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index-en"{% endif %}><img alt="top right bird logo" class="{% for each in site.mobile_bird %}{% if page.trans == each.trans %}{{ each.animation }} {% endif %}{% endfor %}" src="/assets/images/quaker_icon_35x35.png" width="34.5px" height="34.5px"></a>
+		  <a title="Home" href={% if page.lang =="fr" %}"/index-fr"{% else %}"/index"{% endif %}><img alt="top right bird logo" class="{% for each in site.mobile_bird %}{% if page.trans == each.trans %}{{ each.animation }} {% endif %}{% endfor %}" src="/assets/images/quaker_icon_35x35.png" width="34.5px" height="34.5px"></a>
 	  </div>
 </div>
